inner page added

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         </ul>
       </div>
     </div>
-    <div class="copy-write">@copyWrite || harry poter ~2000</div>
+    <div class="copy-write">@copyWrite || vikas Rathore ~ Devansh Jindal</div>
   </footer>
   <script>
     window.addEventListener('load', () => {
