--- a/inner.html
+++ b/inner.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inner Page</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -29,7 +30,8 @@
 
     <!-- Hero Section -->
     <div class="hero">
-        <h1>Inner Page Title</h1>
+      <img src="./img/hero-img.webp" alt="Hero Image">
+      <h1>About Us</h1>
     </div>
 
     <div class="content">
@@ -37,9 +39,11 @@
         <!-- Text and Video Section -->
         <div class="text-video">
             <div class="text">
-                <h2>Section Heading</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce auctor lacus vitae elit interdum, in placerat purus facilisis. Integer pretium, purus sed ultricies lacinia, nunc libero ultricies eros, et malesuada lacus ligula id velit.</p>
-                <p>Quisque non turpis in est lacinia fermentum. Aenean vel tempor libero, non sollicitudin velit. Vivamus feugiat congue diam, a volutpat tortor aliquet id.</p>
+              <h2 class="display-5">Welcome to the Harry Potter Fan Page</h2>
+              <br>
+              <p>Welcome to our magical Harry Potter fan page, where we celebrate the enchanting world created by J.K. Rowling. Whether you are a Gryffindor, Slytherin, Ravenclaw, or Hufflepuff, you will find something to ignite your passion for the Wizarding World.</p>
+              <br>
+              <p>Explore our content, participate in discussions, and share your love for all things Harry Potter!</p>
             </div>
             <div class="video">
                 <video controls poster="path_to_poster_image.jpg">
@@ -51,82 +55,68 @@
 
         <!-- Table Section -->
         <div class="table-section">
-            <h2>Table Heading</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>Year</th>
-                        <th>Games Played</th>
-                        <th>Goals</th>
-                        <th>Assists</th>
-                        <th>Penalties</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>2020</td>
-                        <td>25</td>
-                        <td>30</td>
-                        <td>20</td>
-                        <td>5</td>
-                    </tr>
-                    <tr>
-                        <td>2021</td>
-                        <td>30</td>
-                        <td>40</td>
-                        <td>25</td>
-                        <td>7</td>
-                    </tr>
-                </tbody>
-            </table>
+          <h2>Interesting Facts and Statistics</h2>
+          <table border="1">
+              <thead>
+                  <tr>
+                      <th>Fact</th>
+                      <th>Detail</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td>Number of Books</td>
+                      <td>7</td>
+                  </tr>
+                  <tr>
+                      <td>Number of Movies</td>
+                      <td>8</td>
+                  </tr>
+                  <tr>
+                      <td>Hogwarts Houses</td>
+                      <td>Gryffindor, Slytherin, Ravenclaw, Hufflepuff</td>
+                  </tr>
+                  <!-- Add more rows as needed -->
+              </tbody>
+          </table>
+          <p>Discover more by exploring our content and engaging with fellow fans.</p>
         </div>
 
         <!-- Form Section -->
         <div class="form-section">
-            <h2>Form Heading</h2>
-            <form action="#" method="post">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" required>
-
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="options">Select an option</label>
-                <select id="options" name="options" required>
-                    <optgroup label="Group 1">
-                        <option value="option1">Option 1</option>
-                        <option value="option2">Option 2</option>
-                        <option value="option3">Option 3</option>
-                    </optgroup>
-                    <optgroup label="Group 2">
-                        <option value="option4">Option 4</option>
-                        <option value="option5">Option 5</option>
-                        <option value="option6">Option 6</option>
-                    </optgroup>
-                </select>
-
-                <label for="comments">Comments</label>
-                <textarea id="comments" name="comments" rows="4" required></textarea>
-
-                <div class="options">
-                    <label>Checkboxes</label>
-                    <label><input type="checkbox" name="checkbox1" value="checkbox1"> Checkbox 1</label>
-                    <label><input type="checkbox" name="checkbox2" value="checkbox2"> Checkbox 2</label>
-                    <label><input type="checkbox" name="checkbox3" value="checkbox3"> Checkbox 3</label>
-                </div>
-
-                <div class="options">
-                    <label>Radio Buttons</label>
-                    <label><input type="radio" name="radio" value="radio1"> Radio 1</label>
-                    <label><input type="radio" name="radio" value="radio2"> Radio 2</label>
-                </div>
-
-                <div class="buttons">
-                    <button type="reset" class="reset">Reset</button>
-                    <button type="submit" class="submit">Submit</button>
-                </div>
-            </form>
-           
+          <h2>Join Our Community</h2>
+          <form>
+              <label for="name">Name:</label>
+              <input type="text" id="name" name="name">
+  
+              <label for="email">Email:</label>
+              <input type="email" id="email" name="email">
+  
+              <label for="house">Which house do you belong to?</label>
+              <select id="house" name="house">
+                  <optgroup label="Hogwarts Houses">
+                      <option value="gryffindor">Gryffindor</option>
+                      <option value="slytherin">Slytherin</option>
+                      <option value="ravenclaw">Ravenclaw</option>
+                      <option value="hufflepuff">Hufflepuff</option>
+                  </optgroup>
+              </select>
+  
+              <label for="message">Why do you love Harry Potter?</label>
+              <textarea id="message" name="message" rows="4"></textarea>
+  
+              <label>Favorite Book:</label>
+              <label><input type="checkbox" name="favorite_book" value="philosophers_stone"> Philosopher's Stone</label>
+              <label><input type="checkbox" name="favorite_book" value="chamber_of_secrets"> Chamber of Secrets</label>
+              <label><input type="checkbox" name="favorite_book" value="prisoner_of_azkaban"> Prisoner of Azkaban</label>
+  
+              <label>Favorite Character:</label>
+              <label><input type="radio" name="favorite_character" value="harry"> Harry Potter</label>
+              <label><input type="radio" name="favorite_character" value="hermione"> Hermione Granger</label>
+  
+              <button type="reset" class="btn btn-danger">Reset</button>
+              <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         </div>
 
     </div>
