--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>harry-potter</title>
+  <link rel="icon" href="./image/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Parseltongue&display=swap">
   <link rel="stylesheet" href="style.css">
@@ -14,38 +15,36 @@
   <header>
     <div class="header-container">
       <div class="logo">
-        <img src="./img/logo.png" alt="logo" class="logoimg">
+        <a href="index.html">
+          <img src="./image/logo.png" alt="logo" class="logoimg">
+        </a>
       </div>
       <div class="title"> Project - Vikas Kumar ~ Devansh Jindal</div>
     </div>
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="inner.html">About</a></li>
+        <li><a href="#movies">Movies</a></li>
         <li><a href="#characters">Characters</a></li>
-        <li class="movies"><a href="#movies">Movies</a></li>
+        <li class="movies"><a href="inner.html">About</a></li>
       </ul>
       <div class="movie-links">
-        <h3 class="movie-heading">Harry Potter Movies</h3>
+        <h3 class="movie-heading">About Us</h3>
         <div class="links-container">
-          <p><a href="https://www.imdb.com/title/tt0241527/" target="_blank">Harry Potter and the Philosopher's Stone</a></p>
-          <p><a href="https://www.imdb.com/title/tt0295297/" target="_blank">Harry Potter and the Chamber of Secrets</a></p>
-          <p><a href="https://www.imdb.com/title/tt0304141/" target="_blank">Harry Potter and the Prisoner of Azkaban</a></p>
-          <p><a href="https://www.imdb.com/title/tt0330373/" target="_blank">Harry Potter and the Goblet of Fire</a></p>
-          <p><a href="https://www.imdb.com/title/tt0373889/" target="_blank">Harry Potter and the Order of the Phoenix</a></p>
-          <p><a href="https://www.imdb.com/title/tt0417741/" target="_blank">Harry Potter and the Half-Blood Prince</a></p>
-          <p><a href="https://www.imdb.com/title/tt0926084/" target="_blank">Harry Potter and the Deathly Hallows – Part 1</a></p>
+          <p><a href="inner.html#welcome" class="hover">Introduction</a></p>
+          <p><a href="inner.html#facts" class="hover">Interesting Facts</a></p>
+          <p><a href="inner.html#joinus" class="hover">Join Our Community</a></p>
         </div>
-     </div>
+      </div>
     </nav>
   </header>
   <main class="main">
-    
+
     <div class="home-page-heading">
       <div class="home-page-heading-child">
-            <h2 class="intro"><b>Welcome to the Magical World of Harry Potter</b></h2>
-           
-          </div>
+        <h2 class="intro"><b>Welcome to the Magical World of Harry Potter</b></h2>
+
+      </div>
     </div>
 
     <!-- this is my first content section .......................-->
@@ -55,25 +54,27 @@
         <div class="content-heading-1 content-box">
           <div class="inner-box-content">
             <h3 class="orenge-color fs-1">About Harry Potter</h3>
-            <p class="fs-5">Harry Potter is a series of seven fantasy novels written by British author J.K. Rowling. The series
+            <p class="fs-5">Harry Potter is a series of seven fantasy novels written by British author J.K. Rowling. The
+              series
               chronicles the adventures of a young wizard, Harry Potter, and his friends Hermione Granger and Ron
               Weasley, all of whom are students at Hogwarts School of Witchcraft and Wizardry.</p>
           </div>
         </div>
-        <div class="content-img-1 content-box">
-          <!-- YouTube Embed -->
-          <iframe width="80%" height="315" src="https://www.youtube.com/embed/VyHV0BRtdxo?start=18" frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+        <div class="video my-border">
+          <video width="80%" height="300px" controls poster="./image/video2.jpg">
+            <source src="./media/videoplayback.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+          </video>
         </div>
       </div>
       <div class="inner-cont-container hu ">
         <div class="content-img-2 content-box ">
 
         </div>
-        <div class="content-heading-1 content-box border-none">
+        <div class="content-heading-1 content-box border-none" id="characters">
           <h3 class="orenge-color fs-1">Main Characters</h3>
-          <p class="fs-5">Meet the main characters of the Harry Potter series: Harry Potter, Hermione Granger, Ron Weasley, and many
+          <p class="fs-5">Meet the main characters of the Harry Potter series: Harry Potter, Hermione Granger, Ron
+            Weasley, and many
             more. Each character brings their own unique story and personality to the magical world.</p>
 
         </div>
@@ -85,7 +86,7 @@
 
       <!-- this ia my card content section start................................ -->
       <div class="card-heading">
-        <h3 class="orenge-color fs-2">Explore the Movies</h3>
+        <h3 class="orenge-color fs-2" id="movies">Explore the Movies</h3>
         <br>
         <p><b>Dive into the magical world of the Harry Potter movies. Experience the magic, the excitement, and the
             adventure as you journey through each of the eight films. From "The Philosopher's Stone" to "The Deathly
@@ -94,30 +95,41 @@
       <div class="card-cont">
 
         <div class="card">
-          <img src="./img/img92.jpeg" class="card-img-top" alt="...">
+          <img src="./image/img0000.webp" class="card-img-top" alt="...">
+
           <div class="card-body">
             <h4 class="white-color">Philosopher's Stone</h4>
-            <p>The journey begins with Harry discovering his magical heritage and attending Hogwarts for the first time.
-              An adventure that starts with a letter and changes his life forever.</p>
+            <ul>
+              <li>Harry discovers his magical heritage.</li>
+              <li>He attends Hogwarts for the first time.</li>
+              <li>The adventure begins with a letter.</li>
+              <li>The letter changes his life forever.</li>
+            </ul>
             <a href="#" class="btn bg-orenge">Explore more</a>
           </div>
         </div>
         <div class="card">
-          <img src="./img/img90.jpeg" class="card-img-top " alt="...">
+          <img src="./image/img92.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h4 class="white-color">Chamber of Secrets</h4>
-            <p>In his second year at Hogwarts, Harry uncovers a dark secret about the school's past and faces new
-              challenges and dangers lurking within the Chamber of Secrets.</p>
+            <ul>
+              <li>Harry's second year at Hogwarts.</li>
+              <li>Faces new challenges.</li>
+              <li>Encounters dangers lurking within the Chamber of Secrets.</li>
+            </ul>
+
             <a href="#" class="btn bg-orenge">Explore more</a>
           </div>
         </div>
         <div class="card">
-          <img src="./img/img91.jpg" class="card-img-top" alt="...">
+          <img src="./image/img90.jpeg" class="card-img-top " alt="...">
           <div class="card-body">
             <h4 class="white-color">Prisoner of Azkaban</h4>
-            <p>Harry's third year introduces him to the mysterious Sirius Black, an escaped prisoner believed to be a
-              danger to Harry. As secrets unravel, Harry learns more about his past and the true nature of his enemies.
-            </p>
+            <ul>
+              <li>Harry's third year at Hogwarts.</li>
+              <li>Introduced to Sirius Black, a mysterious escaped prisoner.</li>
+              <li>Secrets unravel.</li>
+            </ul>
             <a href="#" class="btn bg-orenge ">Explore more</a>
           </div>
         </div>
@@ -131,7 +143,7 @@
     <div class="footer-container ">
       <div class="footer-menu center">
         <ul>
-          <li><img src="./img/logo.png" alt="logo" class="logoimg2"></li>
+          <li><img src="./image/logo.png" alt="logo" class="logoimg2"></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="inner.html">About</a></li>
         </ul>
@@ -158,7 +170,7 @@
     <div class="copy-write">@copyWrite || vikas Rathore ~ Devansh Jindal</div>
   </footer>
   <script src="js.js">
-   
+
   </script>
 
 </body>
