--- a/inner.html
+++ b/inner.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
+    <link rel="icon" href="./image/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -14,27 +15,25 @@
     <header>
         <div class="header-container">
           <div class="logo">
-            <img src="./img/logo.png" alt="logo" class="logoimg">
+            <a href="index.html.">
+              <img src="./image/logo.png" alt="logo" class="logoimg">
+            </a>
           </div>
-          <div class="title">Project - Student Name - Student Email</div>
+          <div class="title"> Project - Vikas Kumar ~ Devansh Jindal</div>
         </div>
         <nav>
           <ul class="nav-links">
             <li><a href="index.html">Home</a></li>
-            <li><a href="inner.html">About</a></li>
-            <li><a href="#characters">Characters</a></li>
-            <li class="movies"><a href="#movies">Movies</a></li>
+            <li><a href="index.html#movies">Movies</a></li>
+            <li><a href="index.html#characters">Characters</a></li>
+            <li class="movies"><a href="inner.html">About</a></li>
           </ul>
           <div class="movie-links">
-            <h3 class="movie-heading">Harry Potter Movies</h3>
+            <h3 class="movie-heading">About Us</h3>
             <div class="links-container">
-              <p><a href="https://www.imdb.com/title/tt0241527/" target="_blank">Harry Potter and the Philosopher's Stone</a></p>
-              <p><a href="https://www.imdb.com/title/tt0295297/" target="_blank">Harry Potter and the Chamber of Secrets</a></p>
-              <p><a href="https://www.imdb.com/title/tt0304141/" target="_blank">Harry Potter and the Prisoner of Azkaban</a></p>
-              <p><a href="https://www.imdb.com/title/tt0330373/" target="_blank">Harry Potter and the Goblet of Fire</a></p>
-              <p><a href="https://www.imdb.com/title/tt0373889/" target="_blank">Harry Potter and the Order of the Phoenix</a></p>
-              <p><a href="https://www.imdb.com/title/tt0417741/" target="_blank">Harry Potter and the Half-Blood Prince</a></p>
-              <p><a href="https://www.imdb.com/title/tt0926084/" target="_blank">Harry Potter and the Deathly Hallows – Part 1</a></p>
+              <p><a href="#welcome" class="hover">Introduction</a></p>
+              <p><a href="#facts" class="hover">Intrtesting Fact</a></p>
+              <p><a href="#joinus" class="hover">Join Our Community</a></p>
             </div>
          </div>
         </nav>
@@ -42,7 +41,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-      <img src="./img/hero-img.webp" alt="Hero Image">
+      <img src="./image/hero-img.webp" alt="Hero Image">
       <h1>About Us</h1>
     </div>
 
@@ -50,7 +49,7 @@
 
         <!-- Text and Video Section -->
         <div class="text-video">
-            <div class="text">
+            <div class="text" id="welcome">
               <h2 class="display-5">Welcome to the Harry Potter <span class="">Fan Page</span></h2>
               <br>
               <p>Welcome to our magical Harry Potter fan page, where we celebrate the enchanting world created by J.K. Rowling. Whether you are a Gryffindor, Slytherin, Ravenclaw, or Hufflepuff, you will find something to ignite your passion for the Wizarding World.</p>
@@ -58,15 +57,16 @@
               <p>Explore our content, participate in discussions, and share your love for all things Harry Potter!</p>
             </div>
             <div class="video">
-              <iframe width="80%" height="315" src="https://www.youtube.com/embed/fFGS4zZWGoA" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-              </iframe>
+              <video width="80%" height="315" controls poster="./image/video1.jpeg">
+                <source src="./media/Harry Potter and the Sorcerer's Stone (2001) Official Trailer - Daniel Radcliffe Movie HD.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+              </video>
             </div>
             
         </div>
 
         <!-- Table Section -->
-        <div class="table-section">
+        <div class="table-section" id="facts">
           <h2>Interesting Facts and Statistics</h2>
           <table border="1">
               <thead>
@@ -97,7 +97,7 @@
         </div>
 
         <!-- Form Section -->
-        <div class="form-section">
+        <div class="form-section" id="joinus">
           <h2 class="orenge-color bold">Join Our Community</h2>
           <form>
               <label for="name">Name:</label>
@@ -139,7 +139,7 @@
         <div class="footer-container ">
           <div class="footer-menu center">
             <ul>
-              <li><img src="./img/logo.png" alt="logo" class="logoimg2"></li>
+              <li><img src="./image/logo.png" alt="logo" class="logoimg2"></li>
               <li><a href="index.html">Home</a></li>
               <li><a href="inner.html">About</a></li>
             </ul>
