--- a/styles/index.html
+++ b/styles/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>harry-potter</title>
-  <link rel="icon" href="./image/logo.png">
+  <link rel="icon" href="../image/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Parseltongue&display=swap">
   <link rel="stylesheet" href="style.css">
@@ -16,7 +16,7 @@
     <div class="header-container">
       <div class="logo">
         <a href="index.html">
-          <img src="./image/logo.png" alt="logo" class="logoimg">
+          <img src="../image/logo.png" alt="logo" class="logoimg">
         </a>
       </div>
       <div class="title"> Project - Vikas Kumar ~ Devansh Jindal</div>
@@ -61,8 +61,8 @@
           </div>
         </div>
         <div class="video my-border">
-          <video width="80%" height="300px" controls poster="./image/video2.jpg">
-            <source src="./media/videoplayback.mp4" type="video/mp4">
+          <video width="80%" height="300px" controls poster="../image/video2.jpg">
+            <source src="../media/videoplayback.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -95,7 +95,7 @@
       <div class="card-cont">
 
         <div class="card">
-          <img src="./image/img0000.webp" class="card-img-top" alt="...">
+          <img src="../image/img0000.webp" class="card-img-top" alt="...">
 
           <div class="card-body">
             <h4 class="white-color">Philosopher's Stone</h4>
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./image/img92.jpeg" class="card-img-top" alt="...">
+          <img src="../image/img92.jpeg" class="card-img-top" alt="...">
           <div class="card-body">
             <h4 class="white-color">Chamber of Secrets</h4>
             <ul>
@@ -122,7 +122,7 @@
           </div>
         </div>
         <div class="card">
-          <img src="./image/img90.jpeg" class="card-img-top " alt="...">
+          <img src="../image/img90.jpeg" class="card-img-top " alt="...">
           <div class="card-body">
             <h4 class="white-color">Prisoner of Azkaban</h4>
             <ul>
@@ -143,9 +143,9 @@
     <div class="footer-container ">
       <div class="footer-menu center">
         <ul>
-          <li><img src="./image/logo.png" alt="logo" class="logoimg2"></li>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="inner.html">About</a></li>
+          <li><img src="../image/logo.png" alt="logo" class="logoimg2"></li>
+          <li><a href="./index.html">Home</a></li>
+          <li><a href="./inner.html">About</a></li>
         </ul>
       </div>
       <div class="footer-menu">
