--- a/styles/inner.html
+++ b/styles/inner.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
-    <link rel="icon" href="./image/logo.png">
+    <link rel="icon" href="../image/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
 
@@ -15,18 +15,18 @@
     <header>
         <div class="header-container">
           <div class="logo">
-            <a href="index.html.">
-              <img src="./image/logo.png" alt="logo" class="logoimg">
+            <a href="./index.html">
+              <img src="../image/logo.png" alt="logo" class="logoimg">
             </a>
           </div>
           <div class="title"> Project - Vikas Kumar ~ Devansh Jindal</div>
         </div>
         <nav>
           <ul class="nav-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="index.html#movies">Movies</a></li>
-            <li><a href="index.html#characters">Characters</a></li>
-            <li class="movies"><a href="inner.html">About</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./index.html#movies">Movies</a></li>
+            <li><a href="./index.html#characters">Characters</a></li>
+            <li class="movies"><a href="./inner.html">About</a></li>
           </ul>
           <div class="movie-links">
             <h3 class="movie-heading">About Us</h3>
@@ -41,7 +41,7 @@
 
     <!-- Hero Section -->
     <div class="hero">
-      <img src="./image/hero-img.webp" alt="Hero Image">
+      <img src="../image/hero-img.webp" alt="Hero Image">
       <h1>About Us</h1>
     </div>
 
@@ -57,8 +57,8 @@
               <p>Explore our content, participate in discussions, and share your love for all things Harry Potter!</p>
             </div>
             <div class="video">
-              <video width="80%" height="315" controls poster="./image/video1.jpeg">
-                <source src="./media/Harry Potter and the Sorcerer's Stone (2001) Official Trailer - Daniel Radcliffe Movie HD.mp4" type="video/mp4">
+              <video width="80%" height="315" controls poster="../image/video1.jpeg">
+                <source src="../media/Harry Potter and the Sorcerer's Stone (2001) Official Trailer - Daniel Radcliffe Movie HD.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
             </div>
@@ -139,9 +139,9 @@
         <div class="footer-container ">
           <div class="footer-menu center">
             <ul>
-              <li><img src="./image/logo.png" alt="logo" class="logoimg2"></li>
-              <li><a href="index.html">Home</a></li>
-              <li><a href="inner.html">About</a></li>
+              <li><a href="./index.html"><img src="../image/logo.png" alt="logo" class="logoimg2"></a></li>
+              <li><a href="./index.html">Home</a></li>
+              <li><a href="./inner.html">About</a></li>
             </ul>
           </div>
           <div class="footer-menu">
