--- a/Html/index.html
+++ b/Html/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body class="relative">
+  <div id="top"></div>
   <header>
     <div class="header-container">
       <div class="logo">
@@ -30,13 +31,10 @@
       </ul>
       <div class="movie-links">
         <div class="links-container">
-          <div class="menu-link">
-            <p class="pera"><a href="inner.html#welcome" class="hover ">Introduction</a></p>
-          </div>
-          <div class="menu-link">
+          <div>
             <p class="pera"><a href="inner.html#facts" class="hover ">Interesting Facts</a></p>
           </div>
-          <div class="menu-link">
+          <div>
             <p class="pera"><a href="inner.html#joinus" class="hover ">Join Our Community</a></p>
           </div>
         </div>
@@ -51,7 +49,13 @@
 
       </div>
     </div>
-
+    <div class="top"><a href="#top">
+      <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+        <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
+      </svg>
+    </a>
+    </div>
+    
     <!-- this is my first content section .......................-->
     <div class="cont-cont">
       <div class="inner-cont-container">
@@ -158,7 +162,7 @@
         <ul>
           <li><a href="../Html/inner.html#welcome">Harry Potter</a></li>
           <li><a href="../Html/inner.html#joinus">Join us</a></li>
-          <li><a href="../Html/inner.html#facts">Interesting Fects</a></li>
+          <li><a href="../Html/inner.html#facts">Interesting Facts</a></li>
           <li><a href="#trailer">Trailer</a></li>
         </ul>
       </div>
