--- a/Html/inner.html
+++ b/Html/inner.html
@@ -10,6 +10,7 @@
 
 </head>
 <body  class="body relative">
+  <div id="top"></div>
 
     <!-- header section.............. -->
     <header>
@@ -30,20 +31,22 @@
           </ul>
           <div class="movie-links">
             <div class="links-container">
-              <div class="menu-link">
-                <p class="pera"><a href="inner.html#welcome" class="hover ">Introduction</a></p>
-              </div>
-              <div class="menu-link">
+              <div>
                 <p class="pera"><a href="inner.html#facts" class="hover ">Interesting Facts</a></p>
               </div>
-              <div class="menu-link">
+              <div >
                 <p class="pera"><a href="inner.html#joinus" class="hover ">Join Our Community</a></p>
               </div>
             </div>
           </div>
         </nav>
       </header>
-
+      <div class="top"><a href="#top">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-circle-fill" viewBox="0 0 16 16">
+          <path d="M16 8A8 8 0 1 0 0 8a8 8 0 0 0 16 0m-7.5 3.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707z"/>
+        </svg>
+      </a>
+      </div>
     <!-- Hero Section -->
     <div class="hero">
       <img src="../image/hero-img.webp" alt="Hero Image">
@@ -232,7 +235,7 @@
             <ul>
               <li><a href="./inner.html#welcome">Harry Potter</a></li>
               <li><a href="./inner.html#joinus">Join Us</a></li>
-              <li><a href="./inner.html#facts">Interesting Fects</a></li>
+              <li><a href="./inner.html#facts">Interesting Facts</a></li>
               <li><a href="../Html/index.html#characters">Characters</a></li>
             </ul>
           </div>
