--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>harry-potter</title>
-  <link rel="icon" href="../image/logo.png">
+  <link rel="icon" href="./image/logo.png">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Parseltongue&display=swap">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body class="relative">
@@ -17,7 +17,7 @@
     <div class="header-container">
       <div class="logo">
         <a href="index.html">
-          <img src="../image/logo.png" alt="logo" class="logoimg">
+          <img src="./image/logo.png" alt="logo" class="logoimg">
         </a>
       </div>
       <div class="title"> Project - Vikas Kumar ~ Devansh Jindal</div>
@@ -56,7 +56,7 @@
     </a>
     </div>
     
-    <!-- this is my first content section .......................-->
+    <!-- this is my first content section ............-->
     <div class="cont-cont">
       <div class="inner-cont-container">
 
@@ -70,8 +70,8 @@
           </div>
         </div>
         <div class="video my-border" id="trailer">
-          <video width="80%" height="300px" controls poster="../image/video2.jpg">
-            <source src="../media/videoplayback.mp4" type="video/mp4">
+          <video width="80%" height="300px" controls poster="./image/video2.jpg">
+            <source src="./media/videoplayback.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
@@ -89,11 +89,11 @@
         </div>
       </div>
 
-      <!-- end my first content section................................ -->
+      <!-- end my first content section................ -->
 
 
 
-      <!-- this ia my card content section start................................ -->
+      <!-- this ia my card content section start................ -->
       <div class="card-heading">
         <h3 class="orenge-color fs-2" id="movies">Explore the Movies</h3>
         <br>
@@ -104,7 +104,7 @@
       <div class="card-cont">
 
         <div class="card">
-          <img src="../image/img0000.webp" class="card-img-top" alt="...">
+          <img src="./image/img0000.webp" class="card-img-top" alt="..">
 
           <div class="card-body">
             <h4 class="white-color">Philosopher's Stone</h4>
@@ -114,11 +114,11 @@
               <li>The adventure begins with a letter.</li>
               <li>The letter changes his life forever.</li>
             </ul>
-            <a href="../Html/inner.html#exclusive-videos" class="btn bg-orenge">Read more</a>
+            <a href="./Html/inner.html#exclusive-videos" class="btn bg-orenge">Read more</a>
           </div>
         </div>
         <div class="card">
-          <img src="../image/img92.jpeg" class="card-img-top" alt="...">
+          <img src="./image/img92.jpeg" class="card-img-top" alt="..">
           <div class="card-body">
             <h4 class="white-color">Chamber of Secrets</h4>
             <ul>
@@ -127,11 +127,11 @@
               <li>Encounters dangers lurking within the Chamber of Secrets.</li>
             </ul>
 
-            <a href="../Html/inner.html#exclusive-videos" class="btn bg-orenge">Read more</a>
+            <a href="./Html/inner.html#exclusive-videos" class="btn bg-orenge">Read more</a>
           </div>
         </div>
         <div class="card">
-          <img src="../image/img90.jpeg" class="card-img-top " alt="...">
+          <img src="./image/img90.jpeg" class="card-img-top " alt="..">
           <div class="card-body">
             <h4 class="white-color">Prisoner of Azkaban</h4>
             <ul>
@@ -139,7 +139,7 @@
               <li>Introduced to Sirius Black, a mysterious escaped prisoner.</li>
               <li>Secrets unravel.</li>
             </ul>
-            <a href="../Html/inner.html#exclusive-videos" class="btn bg-orenge ">Read more</a>
+            <a href="./Html/inner.html#exclusive-videos" class="btn bg-orenge ">Read more</a>
           </div>
         </div>
       </div>
@@ -147,12 +147,12 @@
     </div>
   </main>
 
-  <!-- my footer start from here ...................-->
+  <!-- my footer start from here ..........-->
   <footer class="footer">
     <div class="footer-container ">
       <div class="footer-menu center">
         <ul>
-          <li><img src="../image/logo.png" alt="logo" class="logoimg2"></li>
+          <li><img src="./image/logo.png" alt="logo" class="logoimg2"></li>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./inner.html">About</a></li>
         </ul>
@@ -160,25 +160,25 @@
       <div class="footer-menu">
         <h2 class="mycolor">Characters</h2>
         <ul>
-          <li><a href="../Html/inner.html#welcome">Harry Potter</a></li>
-          <li><a href="../Html/inner.html#joinus">Join us</a></li>
-          <li><a href="../Html/inner.html#facts">Interesting Facts</a></li>
+          <li><a href="./Html/inner.html#welcome">Harry Potter</a></li>
+          <li><a href="./Html/inner.html#joinus">Join us</a></li>
+          <li><a href="./Html/inner.html#facts">Interesting Facts</a></li>
           <li><a href="#trailer">Trailer</a></li>
         </ul>
       </div>
       <div class="footer-menu">
         <h2 class="mycolor">Movies</h2>
         <ul>
-          <li><a href="../Html/inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Sorcerer's Stone </a></li>
-          <li><a href="../Html/inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Chamber of Secrets</a></li>
-          <li><a href="../Html/inner.html#Harry Potter and the Goblet of Fire">Harry Potter and the Prisoner of Azkaban</a></li>
-          <li><a href="../Html/inner.html#Harry Potter and the Order of the Phoenix">Harry Potter and the Goblet of Fire</a></li>
+          <li><a href="./Html/inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Sorcerer's Stone </a></li>
+          <li><a href="./Html/inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Chamber of Secrets</a></li>
+          <li><a href="./Html/inner.html#Harry Potter and the Goblet of Fire">Harry Potter and the Prisoner of Azkaban</a></li>
+          <li><a href="./Html/inner.html#Harry Potter and the Order of the Phoenix">Harry Potter and the Goblet of Fire</a></li>
         </ul>
       </div>
     </div>
     <div class="copy-write">@copyWrite || vikas Rathore ~ Devansh Jindal</div>
   </footer>
-  <script src="../javaScript/js.js">
+  <script src="./javaScript/js.js">
 
   </script>
 
