--- a/inner.html
+++ b/inner.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>about</title>
-    <link rel="icon" href="../image/logo.png">
+    <link rel="icon" href="./image/logo.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 
 </head>
 <body  class="body relative">
   <div id="top"></div>
 
-    <!-- header section.............. -->
+    <!-- header section....... -->
     <header>
         <div class="header-container">
           <div class="logo">
-            <a href="../Html/index.html">
-              <img src="../image/logo.png" alt="logo" class="logoimg">
+            <a href="./Html/index.html">
+              <img src="./image/logo.png" alt="logo" class="logoimg">
             </a>
           </div>
           <div class="title"> Project - Vikas Kumar ~ Devansh Jindal</div>
@@ -49,7 +49,7 @@
       </div>
     <!-- Hero Section -->
     <div class="hero">
-      <img src="../image/hero-img.webp" alt="Hero Image">
+      <img src="./image/hero-img.webp" alt="Hero Image">
       <h1>About Us</h1>
     </div>
 
@@ -65,8 +65,8 @@
               <p>Explore our content, participate in discussions, and share your love for all things Harry Potter!</p>
             </div>
             <div class="video">
-              <video width="80%" height="315" controls poster="../image/video1.jpeg">
-                <source src="../media/Harry Potter and the Sorcerer's Stone (2001) Official Trailer - Daniel Radcliffe Movie HD.mp4" type="video/mp4">
+              <video width="80%" height="315" controls poster="./image/video1.jpeg">
+                <source src="./media/Harry Potter and the Sorcerer's Stone (2001) Official Trailer - Daniel Radcliffe Movie HD.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
             </div>
@@ -114,8 +114,8 @@
           
           <div class="videos-container">
             <div class="video-item my-item">
-              <video class="my-video" width="100%" height="300px" controls poster="../image/img09.jpg" id="Harry Potter and the Chamber of Secrets">
-                <source src="../media/1.mp4" type="video/mp4">
+              <video class="my-video" width="100%" height="300px" controls poster="./image/img09.jpg" id="Harry Potter and the Chamber of Secrets">
+                <source src="./media/1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
               <div class="video-info">
@@ -127,8 +127,8 @@
               </div>
             </div>
             <div class="video-item my-item">
-              <video class="my-video" width="100%" height="300px" controls poster="../image/img099.jpeg" id="Harry Potter and the Prisoner of Azkaban">
-                <source src="../media/2.mp4" type="video/mp4">
+              <video class="my-video" width="100%" height="300px" controls poster="./image/img099.jpeg" id="Harry Potter and the Prisoner of Azkaban">
+                <source src="./media/2.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
               <div class="video-info">
@@ -140,8 +140,8 @@
               </div>
             </div>
             <div class="video-item my-item">
-              <video class="my-video" width="100%" height="300px" controls poster="../image/img9999.webp" id="Harry Potter and the Goblet of Fire">
-                <source src="../media/3.mp4" type="video/mp4">
+              <video class="my-video" width="100%" height="300px" controls poster="./image/img9999.webp" id="Harry Potter and the Goblet of Fire">
+                <source src="./media/3.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
               <div class="video-info">
@@ -153,8 +153,8 @@
               </div>
             </div>
             <div class="video-item my-item">
-              <video class="my-video" width="100%" height="300px" controls poster="../image/oo.avif" id="Harry Potter and the Order of the Phoenix">
-                <source src="../media/4.mp4" type="video/mp4">
+              <video class="my-video" width="100%" height="300px" controls poster="./image/oo.avif" id="Harry Potter and the Order of the Phoenix">
+                <source src="./media/4.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
               <div class="video-info">
@@ -166,8 +166,8 @@
               </div>
             </div>
             <div class="video-item my-item ">
-              <video class="my-video" width="100%" height="300px" controls poster="../image/video2.jpg">
-                <source src="../media/5.mp4" type="video/mp4">
+              <video class="my-video" width="100%" height="300px" controls poster="./image/video2.jpg">
+                <source src="./media/5.mp4" type="video/mp4">
                 Your browser does not support the video tag.
               </video>
               <div class="video-info">
@@ -225,7 +225,7 @@
         <div class="footer-container ">
           <div class="footer-menu center">
             <ul>
-              <li><a href="./index.html"><img src="../image/logo.png" alt="logo" class="logoimg2"></a></li>
+              <li><a href="./index.html"><img src="./image/logo.png" alt="logo" class="logoimg2"></a></li>
               <li><a href="./index.html">Home</a></li>
               <li><a href="./inner.html">About</a></li>
             </ul>
@@ -236,7 +236,7 @@
               <li><a href="./inner.html#welcome">Harry Potter</a></li>
               <li><a href="./inner.html#joinus">Join Us</a></li>
               <li><a href="./inner.html#facts">Interesting Facts</a></li>
-              <li><a href="../Html/index.html#characters">Characters</a></li>
+              <li><a href="./Html/index.html#characters">Characters</a></li>
             </ul>
           </div>
           <div class="footer-menu">
@@ -251,6 +251,6 @@
         </div>
         <div class="copy-write">@copyWrite || vikas Rathore ~ Devansh Jindal</div>
       </footer>
-<script src="../javaScript/js.js"></script>
+<script src="./javaScript/js.js"></script>
 </body>
 </html>
