--- a/index.html
+++ b/index.html
@@ -25,17 +25,33 @@
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="#movies">Movies</a></li>
         <li><a href="#characters">Characters</a></li>
-        <li class="movies"><a href="inner.html">About</a></li>
+        <li class="movies"><a href="#movies">Movies</a></li>
+        <li class="about"><a href="inner.html">About</a></li>
       </ul>
-      <div class="movie-links">
+      <div class="about-links">
         <div class="links-container">
           <div>
             <p class="pera"><a href="inner.html#facts" class="hover ">Interesting Facts</a></p>
           </div>
           <div>
             <p class="pera"><a href="inner.html#joinus" class="hover ">Join Our Community</a></p>
+          </div>
+        </div>
+      </div>
+      <div class="movies-links">
+        <div class="links-container">
+          <div>
+            <p class="pera"><a href="./inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Sorcerer's Stone </a></p>
+          </div>
+          <div>
+            <p class="pera"><a href="./inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Chamber of Secrets</a></p>
+          </div>
+          <div>
+            <p class="pera"><a href="./inner.html#Harry Potter and the Goblet of Fire">Harry Potter and the Prisoner of Azkaban</a></p>
+          </div>
+          <div>
+            <p class="pera"><a href="./inner.html#Harry Potter and the Order of the Phoenix">Harry Potter and the Goblet of Fire</a></p>
           </div>
         </div>
       </div>
@@ -114,7 +130,7 @@
               <li>The adventure begins with a letter.</li>
               <li>The letter changes his life forever.</li>
             </ul>
-            <a href="./Html/inner.html#exclusive-videos" class="btn bg-orenge">Read more</a>
+            <a href="./inner.html#exclusive-videos" class="btn bg-orenge">Read more</a>
           </div>
         </div>
         <div class="card">
@@ -127,7 +143,7 @@
               <li>Encounters dangers lurking within the Chamber of Secrets.</li>
             </ul>
 
-            <a href="./Html/inner.html#exclusive-videos" class="btn bg-orenge">Read more</a>
+            <a href="./inner.html#exclusive-videos" class="btn bg-orenge">Read more</a>
           </div>
         </div>
         <div class="card">
@@ -139,7 +155,7 @@
               <li>Introduced to Sirius Black, a mysterious escaped prisoner.</li>
               <li>Secrets unravel.</li>
             </ul>
-            <a href="./Html/inner.html#exclusive-videos" class="btn bg-orenge ">Read more</a>
+            <a href="./inner.html#exclusive-videos" class="btn bg-orenge ">Read more</a>
           </div>
         </div>
       </div>
@@ -160,19 +176,19 @@
       <div class="footer-menu">
         <h2 class="mycolor">Characters</h2>
         <ul>
-          <li><a href="./Html/inner.html#welcome">Harry Potter</a></li>
-          <li><a href="./Html/inner.html#joinus">Join us</a></li>
-          <li><a href="./Html/inner.html#facts">Interesting Facts</a></li>
-          <li><a href="#trailer">Trailer</a></li>
+          <li><a href="./inner.html#welcome">Harry Potter</a></li>
+          <li><a href="./inner.html#joinus">Join us</a></li>
+          <li><a href="./inner.html#facts">Interesting Facts</a></li>
+          <li><a href="./index.html#characters">Characters</a></li>
         </ul>
       </div>
       <div class="footer-menu">
         <h2 class="mycolor">Movies</h2>
         <ul>
-          <li><a href="./Html/inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Sorcerer's Stone </a></li>
-          <li><a href="./Html/inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Chamber of Secrets</a></li>
-          <li><a href="./Html/inner.html#Harry Potter and the Goblet of Fire">Harry Potter and the Prisoner of Azkaban</a></li>
-          <li><a href="./Html/inner.html#Harry Potter and the Order of the Phoenix">Harry Potter and the Goblet of Fire</a></li>
+          <li><a href="./inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Sorcerer's Stone </a></li>
+          <li><a href="./inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Chamber of Secrets</a></li>
+          <li><a href="./inner.html#Harry Potter and the Goblet of Fire">Harry Potter and the Prisoner of Azkaban</a></li>
+          <li><a href="./inner.html#Harry Potter and the Order of the Phoenix">Harry Potter and the Goblet of Fire</a></li>
         </ul>
       </div>
     </div>
