--- a/inner.html
+++ b/inner.html
@@ -25,17 +25,33 @@
         <nav>
           <ul class="nav-links">
             <li><a href="./index.html">Home</a></li>
-            <li><a href="./index.html#movies">Movies</a></li>
             <li><a href="./index.html#characters">Characters</a></li>
-            <li class="movies"><a href="./inner.html">About</a></li>
+            <li class="movies"><a href="./index.html#movies">Movies</a></li>
+            <li class="about"><a href="./inner.html">About</a></li>
           </ul>
-          <div class="movie-links">
+          <div class="about-links">
             <div class="links-container">
               <div>
                 <p class="pera"><a href="inner.html#facts" class="hover ">Interesting Facts</a></p>
               </div>
-              <div >
+              <div>
                 <p class="pera"><a href="inner.html#joinus" class="hover ">Join Our Community</a></p>
+              </div>
+            </div>
+          </div>
+          <div class="movies-links">
+            <div class="links-container">
+              <div>
+                <p class="pera"><a href="./inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Sorcerer's Stone </a></p>
+              </div>
+              <div>
+                <p class="pera"><a href="./inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Chamber of Secrets</a></p>
+              </div>
+              <div>
+                <p class="pera"><a href="./inner.html#Harry Potter and the Goblet of Fire">Harry Potter and the Prisoner of Azkaban</a></p>
+              </div>
+              <div>
+                <p class="pera"><a href="./inner.html#Harry Potter and the Order of the Phoenix">Harry Potter and the Goblet of Fire</a></p>
               </div>
             </div>
           </div>
@@ -236,7 +252,7 @@
               <li><a href="./inner.html#welcome">Harry Potter</a></li>
               <li><a href="./inner.html#joinus">Join Us</a></li>
               <li><a href="./inner.html#facts">Interesting Facts</a></li>
-              <li><a href="./Html/index.html#characters">Characters</a></li>
+              <li><a href="./index.html#characters">Characters</a></li>
             </ul>
           </div>
           <div class="footer-menu">
