final changes made

--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
       <div class="movies-links">
         <div class="links-container">
           <div>
-            <p class="pera"><a href="./inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Sorcerer's Stone </a></p>
+            <p class="pera"><a href="./inner.html#Harry Potter and the Chamber of Secrets" class="hover">Harry Potter and the Sorcerer's Stone </a></p>
           </div>
           <div>
-            <p class="pera"><a href="./inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Chamber of Secrets</a></p>
+            <p class="pera"><a href="./inner.html#Harry Potter and the Prisoner of Azkaban" class="hover">Harry Potter and the Chamber of Secrets</a></p>
           </div>
           <div>
-            <p class="pera"><a href="./inner.html#Harry Potter and the Goblet of Fire">Harry Potter and the Prisoner of Azkaban</a></p>
+            <p class="pera"><a href="./inner.html#Harry Potter and the Goblet of Fire" class="hover">Harry Potter and the Prisoner of Azkaban</a></p>
           </div>
           <div>
-            <p class="pera"><a href="./inner.html#Harry Potter and the Order of the Phoenix">Harry Potter and the Goblet of Fire</a></p>
+            <p class="pera"><a href="./inner.html#Harry Potter and the Order of the Phoenix" class="hover">Harry Potter and the Goblet of Fire</a></p>
           </div>
         </div>
       </div>
