--- a/index.html
+++ b/index.html
@@ -182,10 +182,9 @@
       <div class="footer-menu">
         <h2 class="mycolor">Movies</h2>
         <ul>
-          <li><a href="./inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Sorcerer's Stone </a></li>
-          <li><a href="./inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Chamber of Secrets</a></li>
-          <li><a href="./inner.html#Harry Potter and the Goblet of Fire">Harry Potter and the Prisoner of Azkaban</a></li>
-          <li><a href="./inner.html#Harry Potter and the Order of the Phoenix">Harry Potter and the Goblet of Fire</a></li>
+          <li><a href="./inner.html#Harry Potter and the Sorcerer's Stone">Harry Potter and the Sorcerer's Stone </a></li>
+          <li><a href="./inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Chamber of Secrets</a></li>
+          <li><a href="./inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Prisoner of Azkaban</a></li>
         </ul>
       </div>
     </div>
