logo linking fixed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <header>
     <div class="header-container">
       <div class="logo">
-        <a href="index.html">
+        <a href="./index.html">
           <img src="./image/logo.png" alt="logo" class="logoimg">
         </a>
       </div>
@@ -165,7 +165,7 @@
     <div class="footer-container ">
       <div class="footer-menu center">
         <ul>
-          <li><img src="./image/logo.png" alt="logo" class="logoimg2"></li>
+          <li><a href="./index.html"><img src="./image/logo.png" alt="logo" class="logoimg2"></a></li>
           <li><a href="./index.html">Home</a></li>
           <li><a href="./inner.html">About</a></li>
         </ul>
