--- a/inner.html
+++ b/inner.html
@@ -16,7 +16,7 @@
     <header>
         <div class="header-container">
           <div class="logo">
-            <a href="./Html/index.html">
+            <a href="./index.html">
               <img src="./image/logo.png" alt="logo" class="logoimg">
             </a>
           </div>
