--- a/inner.html
+++ b/inner.html
@@ -32,23 +32,23 @@
           <div class="about-links">
             <div class="links-container">
               <div>
-                <p class="pera"><a href="inner.html#facts" class="hover ">Interesting Facts</a></p>
+                <p class="pera"><a href="./inner.html#facts" class="hover ">Interesting Facts</a></p>
               </div>
               <div>
-                <p class="pera"><a href="inner.html#joinus" class="hover ">Join Our Community</a></p>
+                <p class="pera"><a href="./inner.html#joinus" class="hover ">Join Our Community</a></p>
               </div>
             </div>
           </div>
           <div class="movies-links">
             <div class="links-container">
               <div>
-                <p class="pera"><a href="./inner.html#Harry Potter and the Sorcerer's Stone" class="hover">Harry Potter and the Sorcerer's Stone</a></p>
+                <p class="pera"><a href="./inner.html#Harry_Potter_and_the_Sorcerer's_Stone" class="hover">Harry Potter and the Sorcerer's Stone</a></p>
               </div>
               <div>
-                <p class="pera"><a href="./inner.html#Harry Potter and the Chamber of Secrets" class="hover">Harry Potter and the Chamber of Secrets</a></p>
+                <p class="pera"><a href="./inner.html#Harry_Potter_and_the_Chamber_of_Secrets" class="hover">Harry Potter and the Chamber of Secrets</a></p>
               </div>
               <div>
-                <p class="pera"><a href="./inner.html#Harry Potter and the Prisoner of Azkaban" class="hover">Harry Potter and the Prisoner of Azkaban</a></p>
+                <p class="pera"><a href="./inner.html#Harry_Potter_and_the_Prisoner_of_Azkaban" class="hover">Harry Potter and the Prisoner of Azkaban</a></p>
               </div>
             </div>
           </div>
@@ -190,13 +190,12 @@
                 <div class="stats">
                   <span>6 👍</span> <span>3 ❤️</span>
                 </div>
-                <div id="Harry Potter and the Sorcerer's Stone"></div>
               </div>
             </div>
             
             <!--  Add more video items as needed -->
           </div> 
-          <div class="inner-cont-container hu" >
+          <div class="inner-cont-container hu" id="Harry_Potter_and_the_Sorcerer's_Stone">
             <div class="content-vid-2 content-box ">
               <video class="my-video" width="100%" height="100%" controls poster="./image/Harry-Potter-and-the-Sorcerers-Stone-20th-Anniversary-Edition.jpg" >
               <source src="./media/sorcers stone trailer.mp4" type="video/mp4">
@@ -207,12 +206,11 @@
               <h3 class="orenge-color fs-2">Harry Potter and the Sorcerer's Stone</h3>
               <p class="fs-6">
                 Harry Potter and the Sorcerer's Stone is a fantasy film released in 2001, directed by Chris Columbus. It is based on J.K. Rowling's 1997 novel of the same name. The movie follows the young Harry Potter, who discovers on his eleventh birthday that he is a wizard.</p>
-                <div id="Harry Potter and the Chamber of Secrets"></div>
     
             </div>
           </div>
           <hr>
-          <div class="inner-cont-container hu ">
+          <div class="inner-cont-container hu " id="Harry_Potter_and_the_Chamber_of_Secrets">
             <div class="content-heading-1 content-box border-none">
               <h3 class="orenge-color fs-2">Harry Potter and the Chamber of Secrets</h3>
               <p class="fs-6">Harry Potter and the Chamber of Secrets" is the second film in the Harry Potter series. It follows Harry's second year at Hogwarts, where he uncovers the mystery of a hidden chamber, confronts a deadly monster, and learns more about his connection to the dark wizard Voldemort.</p>
@@ -224,10 +222,9 @@
                 Your browser does not support the video tag.
               </video>
             </div>
-            <div id="Harry Potter and the Prisoner of Azkaban"></div> 
           </div>
             <hr>
-            <div class="inner-cont-container hu " >
+            <div class="inner-cont-container hu " id="Harry_Potter_and_the_Prisoner_of_Azkaban" >
               <div class="content-vid-2 content-box ">
                 <video class="my-video" width="100%" height="100%" controls poster="./image/Prisoner_of_azkaban_UK_poster.jpg">
                 <source src="./media/Harry Potter and the Prisoner of Azkaban Trailer.mp4" type="video/mp4">
@@ -302,9 +299,9 @@
           <div class="footer-menu">
             <h2 class="mycolor">Movies</h2>
             <ul>
-              <li><a href="./inner.html#Harry Potter and the Sorcerer's Stone">Harry Potter and the Sorcerer's Stone </a></li>
-              <li><a href="./inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Chamber of Secrets</a></li>
-              <li><a href="./inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Prisoner of Azkaban</a></li>
+              <li><a href="./inner.html#Harry_Potter_and_the_Sorcerer's_Stone">Harry Potter and the Sorcerer's Stone </a></li>
+              <li><a href="./inner.html#Harry_Potter_and_the_Chamber_of_Secrets">Harry Potter and the Chamber of Secrets</a></li>
+              <li><a href="./inner.html#Harry_Potter_and_the_Prisoner_of_Azkaban">Harry Potter and the Prisoner of Azkaban</a></li>
             </ul>
           </div>
         </div>
