--- a/index.html
+++ b/index.html
@@ -27,28 +27,28 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="#characters">Characters</a></li>
         <li class="movies"><a href="#movies">Movies</a></li>
-        <li class="about"><a href="inner.html">About</a></li>
+        <li class="about"><a href="./inner.html">About</a></li>
       </ul>
       <div class="about-links">
         <div class="links-container">
           <div>
-            <p class="pera"><a href="inner.html#facts" class="hover ">Interesting Facts</a></p>
+            <p class="pera"><a href="./inner.html#facts" class="hover ">Interesting Facts</a></p>
           </div>
           <div>
-            <p class="pera"><a href="inner.html#joinus" class="hover ">Join Our Community</a></p>
+            <p class="pera"><a href="./inner.html#joinus" class="hover ">Join Our Community</a></p>
           </div>
         </div>
       </div>
       <div class="movies-links">
         <div class="links-container">
           <div>
-            <p class="pera"><a href="./inner.html#Harry Potter and the Sorcerer's Stone" class="hover">Harry Potter and the Sorcerer's Stone</a></p>
+            <p class="pera"><a href="./inner.html#Harry_Potter_and_the_Sorcerer's_Stone" class="hover">Harry Potter and the Sorcerer's Stone</a></p>
           </div>
           <div>
-            <p class="pera"><a href="./inner.html#Harry Potter and the Chamber of Secrets" class="hover">Harry Potter and the Chamber of Secrets</a></p>
+            <p class="pera"><a href="./inner.html#Harry_Potter_and_the_Chamber_of_Secrets" class="hover">Harry Potter and the Chamber of Secrets</a></p>
           </div>
           <div>
-            <p class="pera"><a href="./inner.html#Harry Potter and the Prisoner of Azkaban" class="hover">Harry Potter and the Prisoner of Azkaban</a></p>
+            <p class="pera"><a href="./inner.html#Harry_Potter_and_the_Prisoner_of_Azkaban" class="hover">Harry Potter and the Prisoner of Azkaban</a></p>
           </div>
         </div>
       </div>
@@ -182,9 +182,9 @@
       <div class="footer-menu">
         <h2 class="mycolor">Movies</h2>
         <ul>
-          <li><a href="./inner.html#Harry Potter and the Sorcerer's Stone">Harry Potter and the Sorcerer's Stone </a></li>
-          <li><a href="./inner.html#Harry Potter and the Chamber of Secrets">Harry Potter and the Chamber of Secrets</a></li>
-          <li><a href="./inner.html#Harry Potter and the Prisoner of Azkaban">Harry Potter and the Prisoner of Azkaban</a></li>
+          <li><a href="./inner.html#Harry_Potter_and_the_Sorcerer's_Stone">Harry Potter and the Sorcerer's Stone </a></li>
+          <li><a href="./inner.html#Harry_Potter_and_the_Chamber_of_Secrets">Harry Potter and the Chamber of Secrets</a></li>
+          <li><a href="./inner.html#Harry_Potter_and_the_Prisoner_of_Azkaban">Harry Potter and the Prisoner of Azkaban</a></li>
         </ul>
       </div>
     </div>
